--- a/pom.xml
+++ b/pom.xml
@@ -32,6 +32,11 @@
 	</dependencyManagement>
 
 	<dependencies>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter</artifactId>
+		</dependency>
+
 		<!-- ✅ OpenAPI / Swagger -->
 		<dependency>
 			<groupId>org.springdoc</groupId>
